made off map list, fixed dictionary entry verse list to wrap

--- a/App/style.css
+++ b/App/style.css
@@ -141,6 +141,12 @@ main {
     max-width: 200px;
 }
 
+/* #dictionary-entry-verse-references-list{
+color:orange; */
+/* word-wrap: break-word; */
+
+/* } */
+
 .color-hover{
     /* background-color: antiquewhite; */
     background-color: rgb(240, 240, 255);
@@ -176,6 +182,13 @@ main {
 #map-container{
     position:relative;
     left: 80px;
+}
+#off-map-list{
+    position:absolute;
+    left:0px;
+    top:0px;
+    font-size: 0.9rem;
+    color: blue;
 }
 .bulls-eye{
     color:blue;
